samples/_failures_safe/1761463251_b16b38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c71d7a4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7c71d7a4.c:165:13: error: expected declaration or statement at end of input
  165 |             read_identifier(lexer);
      |             ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7c71d7a4.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7c71d7a4.c:165:13: error: expected declaration or statement at end of input
